--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="back">TODO</string>
     <string name="product_price_dtl">BDT 30,000</string>
     <string name="Some_thing_elas">TODO</string>
+    <string name="brandinformation">Specifications : Brand, Main Material, Box Content</string>
 </resources>
